--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,28 @@
-body {
+.background {
     font-family: 'Times New Roman', serif;
     background-image: url(./img/pexels-pixabay-221516.jpg) ;
-    opacity: 0.8;
     height: 100vh;
-    width: 100vw;
+    width:100vw;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 
 h1, h2, h3, h4, h5, h6, .title {
     font-family: 'Cinzel Decorative', cursive, 'Times New Roman';
 }
+
+.container {
+    background-color: rgba(240, 248, 255, 0.3);
+    /* opacity: 0.5; */
+}
+
+.navbar {
+    background-color: rgba(243, 245, 245, 0.8);
+}
+
+
 
 .logo {
     margin: auto;
@@ -19,6 +30,7 @@ h1, h2, h3, h4, h5, h6, .title {
     width: 100%;
     display: flex;
     justify-content: center;
+    background-color: rgba(243, 245, 245, 0.6);
 }
 
 .name {
