--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-.background {
+body {
     font-family: 'Times New Roman', serif;
     background-image: url(./img/pexels-pixabay-221516.jpg) ;
-    height: 100vh;
-    width:100vw;
+    /* height: 100vh; */
+    /* width:100vw; */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .navbar {
-    background-color: rgba(243, 245, 245, 0.8);
+    background-color: rgba(243, 245, 245, 0.7);
 }
 
 
