--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,6 @@ h1, h2, h3, h4, h5, h6, .title {
     background-color: rgba(243, 245, 245, 0.2);
 }
 
-
-
 .logo {
     margin: auto;
     padding: 20px 20px;
@@ -47,6 +45,7 @@ h1, h2, h3, h4, h5, h6, .title {
 
 footer {
     margin-top: 2rem;
+    color: white;
 }
 
 .footer {
@@ -78,6 +77,12 @@ footer > a:hover {
 .main__item--img {
     padding-left: 15px;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    }
 
 @media screen and (max-width: 375px) {
     
