copy img in a-source for working on the html-css integration

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Times New Roman', serif;
-    background-image: url(./img/pexels-pixabay-221516.jpg) ;
+    background-image: url(../img/pexels-pixabay-221516.jpg) ;
     /* height: 100vh; */
     /* width:100vw; */
     background-position: center;
