--- a/a-source/styles.css
+++ b/a-source/styles.css
@@ -5,8 +5,7 @@ body {
     /* width:100vw; */
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat;    
 }
 
 h1, h2, h3, h4, h5, h6, .title {
@@ -14,7 +13,8 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .container {
-    padding:  0 ;
+    margin-top: 20px;
+    padding:  0;
     background-color: rgba(240, 248, 255, 0.3);
 }
 
