--- a/a-source/styles.css
+++ b/a-source/styles.css
@@ -13,6 +13,7 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .container {
+    /* ? j'ai rajouté le margin top pour avoir le même retrait en haut que l'on a en bas car pas réussi à virer le bas */
     margin-top: 20px;
     padding:  0;
     background-color: rgba(240, 248, 255, 0.3);
