--- a/a-source/styles.css
+++ b/a-source/styles.css
@@ -40,6 +40,10 @@ h1, h2, h3, h4, h5, h6, .title {
     padding: 20px 20px ;    
 }
 
+.main {
+    margin: 0 20px ;    
+}
+
 .img {
     width: 100%;
 }
