--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,11 @@
 body {
     font-family: 'Times New Roman', serif;
-    background-image: url(../img/pexels-pixabay-221516.jpg) ;
+    background-image: url(./img/pexels-pixabay-221516.jpg) ;
     /* height: 100vh; */
     /* width:100vw; */
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat;    
 }
 
 h1, h2, h3, h4, h5, h6, .title {
@@ -14,7 +13,9 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .container {
-    padding:  0 ;
+    /* ? j'ai rajouté le margin top pour avoir le même retrait en haut que l'on a en bas car pas réussi à virer le bas */
+    margin-top: 20px;
+    padding:  0;
     background-color: rgba(240, 248, 255, 0.3);
 }
 
@@ -37,6 +38,10 @@ h1, h2, h3, h4, h5, h6, .title {
 
 .citation{
     padding: 20px 20px ;    
+}
+
+.main {
+    margin: 0 20px ;    
 }
 
 .img {
