--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,136 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+            <!-- link bootstrap & bootstrap icon -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+            
+            <!-- link font titres  -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant:wght@400;500;700&display=swap" rel="stylesheet">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+
+            <!-- link css  -->
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+
+            {# favicon #}
+            <link rel="icon" href="{{ asset('img/other/favicon.png') }}">
+            
+                
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        <div class="container">
+            <header>
+
+                <div class="logo">
+                <a href="{{ path("default") }}"><img class="img" src="{{ asset('img/logo.png') }}"></a>
+                </div>
+
+                <nav class="navbar navbar-expand-xxl bg-body-tertiary">
+                    <div class="container-fluid">
+                        <a class="navbar-brand title" href="{{ path("default") }}"> Kaamel'O'tt </a>
+
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="./img/icone.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                            User-a-nom-tres-long
+                            </a>
+                            <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Connexion</a></li>
+                            <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                            <li><a class="dropdown-item" href="#">Profil</a></li>
+                            </ul>
+                        </li>
+                        </ul>
+
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{{ path("default") }}">Accueil</a>
+                            </li>
+
+                            <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="characters.html">Personnages</a>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Citations
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="quotes.html">Liste générale</a></li>
+                                <li><a class="dropdown-item" href="#">Par livre</a></li>
+                                <li><a class="dropdown-item" href="#">Par saison</a></li>
+                            </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Saisons
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Livre I</a></li>
+                                <li><a class="dropdown-item" href="#">Livre II</a></li>
+                                <li><a class="dropdown-item" href="#">Livre III</a></li>
+                                <li><a class="dropdown-item" href="#">Livre IV</a></li>
+                                <li><a class="dropdown-item" href="#">Livre V</a></li>
+                                <li><a class="dropdown-item" href="#">Livre VI</a></li>
+                                <li><a class="dropdown-item" href="#">Premier volet</a></li>
+                            </ul>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Quizz
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Quizz 1</a></li>
+                                <li><a class="dropdown-item" href="#">Quizz 2</a></li>
+                            </ul>
+                            </li>
+
+                            <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Favoris</a>
+                            </li>
+
+                            
+
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn" type="submit"><img src="./img/loupe.png" alt="search-icon" width="24" height="24"></button>
+                        </form>
+                        </div>
+
+                        
+                    </div>
+                    </nav>
+            </header>
+
+                {% block body %}{% endblock %}
+
+            <footer>
+            
+                <div class="footer">
+                    <a href="{{ path("app_home_legales") }}" class="nav-link link-opacity-25-hover" role="button" >Mentions légales</a>
+                    <a href="#" class="nav-link">Copyright &copy; 2023</a>
+                </div>
+                    <p>Made by Edith, Céline, Angèle and Aurélie.</p>
+                
+            </footer>
+
+        <!-- script bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        </div>
     </body>
 </html>
