creation of folders in Controller to store the controllers

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,7 +70,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="quotes.html">Liste générale</a></li>
                                 <li><a class="dropdown-item" href="#">Par livre</a></li>
-                                <li><a class="dropdown-item" href="#">Par saison</a></li>
+                                <li><a class="dropdown-item" href="#">Par épisode</a></li>
                             </ul>
                             </li>
 
