--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,114 +20,28 @@
 
             {# favicon #}
             <link rel="icon" href="{{ asset('img/other/favicon.png') }}">
-            
-                
+
+            <title>{% block title %}Kaamel'O'tt{% endblock %}</title>
+                       
     </head>
+
     <body>
 
         <div class="container">
-            <header>
 
-                <div class="logo">
-                <a href="{{ path("default") }}"><img class="img" src="{{ asset('img/logo.png') }}"></a>
-                </div>
+        {{ include('partials/_nav.html.twig') }}
 
-                <nav class="navbar navbar-expand-xxl bg-body-tertiary">
-                    <div class="container-fluid">
-                        <a class="navbar-brand title" href="{{ path("default") }}"> Kaamel'O'tt </a>
+        {% block body %}{% endblock %}
 
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="./img/icone.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                            User-a-nom-tres-long
-                            </a>
-                            <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Connexion</a></li>
-                            <li><a class="dropdown-item" href="#">Déconnexion</a></li>
-                            <li><a class="dropdown-item" href="#">Profil</a></li>
-                            </ul>
-                        </li>
-                        </ul>
-
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ path("default") }}">Accueil</a>
-                            </li>
-
-                            <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="characters.html">Personnages</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Citations
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="quotes.html">Liste générale</a></li>
-                                <li><a class="dropdown-item" href="#">Par livre</a></li>
-                                <li><a class="dropdown-item" href="#">Par épisode</a></li>
-                            </ul>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Saisons
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Livre I</a></li>
-                                <li><a class="dropdown-item" href="#">Livre II</a></li>
-                                <li><a class="dropdown-item" href="#">Livre III</a></li>
-                                <li><a class="dropdown-item" href="#">Livre IV</a></li>
-                                <li><a class="dropdown-item" href="#">Livre V</a></li>
-                                <li><a class="dropdown-item" href="#">Livre VI</a></li>
-                                <li><a class="dropdown-item" href="#">Premier volet</a></li>
-                            </ul>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Quizz
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Quizz 1</a></li>
-                                <li><a class="dropdown-item" href="#">Quizz 2</a></li>
-                            </ul>
-                            </li>
-
-                            <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Favoris</a>
-                            </li>
-
-                            
-
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn" type="submit"><img src="./img/loupe.png" alt="search-icon" width="24" height="24"></button>
-                        </form>
-                        </div>
-
-                        
-                    </div>
-                    </nav>
-            </header>
-
-                {% block body %}{% endblock %}
-
-            <footer>
-            
-                <div class="footer">
-                    <a href="{{ path("app_home_legales") }}" class="nav-link link-opacity-25-hover" role="button" >Mentions légales</a>
-                    <a href="#" class="nav-link">Copyright &copy; 2023</a>
-                </div>
-                    <p>Made by Edith, Céline, Angèle and Aurélie.</p>
-                
-            </footer>
+    <footer>
+        
+        <div class="footer">
+            <a href="{{ path("app_home_legales") }}" class="nav-link link-opacity-25-hover" role="button">Mentions légales</a>
+            <a href="#" class="nav-link">Copyright &copy; 2023</a>
+        </div>
+            <p>Made by Edith, Céline, Angèle and Aurélie.</p>
+        
+    </footer>
 
         <!-- script bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
