--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -122,7 +122,7 @@
             <footer>
             
                 <div class="footer">
-                    <a href="{{ path("app_home_legales") }}" class="nav-link link-opacity-25-hover" role="button" >Mentions légales</a>
+                    <a href="{{ path("app_home_legalNotice") }}" class="nav-link link-opacity-25-hover" role="button" >Mentions légales</a>
                     <a href="#" class="nav-link">Copyright &copy; 2023</a>
                 </div>
                     <p>Made by Edith, Céline, Angèle and Aurélie.</p>
