PersonageController is on its way

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -32,7 +32,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="characters.html">Personnages</a>
+            <a class="nav-link " aria-current="page" href="{{ path("app_frontoffice_personage") }}">Personnages</a>
             </li>
 
             <li class="nav-item dropdown">
