--- a/templates/backoffice/season/browse.html.twig
+++ b/templates/backoffice/season/browse.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
 
-
 <main>
     
     <div class="main-content">
@@ -29,7 +28,7 @@
                     <td>{{ season.title }}</td>
                     <td>
                         <a href="{{ path('app_backoffice_season_read', {'id': season.id}) }}">Voir</a>
-                        <a href="#">Modifier</a>
+                        <a href="{{ path('app_backoffice_season_edit', {'id': season.id}) }}">Modifier</a>
                         <a href="#">Supprimer</a>
                     </td>
                 </tr>
