--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,7 +87,15 @@ footer > a:hover {
     width: 100%;
     height: 40vh;
     object-fit: cover;
-    }
+}
+
+figcaption {
+    background-color: #222;
+    color: #fff;
+    font-size: 0.7rem;
+    padding: 3px;
+    text-align: center;
+}
 
 @media screen and (max-width: 375px) {
     
