--- a/templates/frontoffice/personage/index.html.twig
+++ b/templates/frontoffice/personage/index.html.twig
@@ -8,60 +8,19 @@
 
     <div class="row row-cols-1 row-cols-md-4 m-3">
 
+    {% for character in characters %}
         <div class="col mb-3">
-            <a href="character.html" class="nav-link">
+            <a href="{{ path('app_frontoffice_personage_read', {"id" : character.id }) }}" class="nav-link">
             <div class="card">
-                <img src="./img/personage/Arthur.jpg" class="card-img-top" alt="Arthur">
+                <img src="{{ asset('img/personage/' ~ character.picture) }}" class="card-img-top" alt="{{ character.name }}">
                 <div class="card-body">
-                    <h6 class="card-title">Arthur</h6>
+                    <h6 class="card-title">{{ character.name }}</h6>
                 </div>
             </div>
             </a>
         </div>
+    {% endfor %}
 
-        <div class="col mb-3">
-            <a href="character.html" class="nav-link">
-            <div class="card">
-                <img src="./img/personage/Bohort.jpg" class="card-img-top" alt="Bohort">
-                <div class="card-body">
-                    <h6 class="card-title">Bohort</h6>
-                </div>
-            </div>
-            </a>
-        </div>
-
-        <div class="col mb-3">
-            <a href="character.html" class="nav-link">
-            <div class="card">
-                <img src="./img/personage/Dagonet.jpg" class="card-img-top" alt="Dagonet">
-                <div class="card-body">
-                    <h6 class="card-title">Dagonet</h6>
-                </div>
-            </div>
-            </a>
-        </div>
-
-        <div class="col mb-3">
-            <a href="character.html" class="nav-link">
-            <div class="card">
-                <img src="./img/personage/Guenievre.jpg" class="card-img-top" alt="Guenièvre">
-                <div class="card-body">
-                    <h6 class="card-title">Guenièvre</h6>
-                </div>
-            </div>
-            </a>
-        </div>
-        
-        <div class="col mb-3">
-            <a href="character.html" class="nav-link">
-            <div class="card">
-                <img src="./img/personage/Horsa.jpg" class="card-img-top" alt="Horsa">
-                <div class="card-body">
-                    <h6 class="card-title">Horsa</h6>
-                </div>
-            </div>
-            </a>
-        </div>
 
     </div>
 
