--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -11,7 +11,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="./img/icone.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="{{ asset('img/icone.png') }}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 User-a-nom-tres-long
                 </a>
                 <ul class="dropdown-menu">
@@ -32,7 +32,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="{{ path("app_frontoffice_personage") }}">Personnages</a>
+            <a class="nav-link " aria-current="page" href="{{ path("app_frontoffice_personages_browse") }}">Personnages</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -78,7 +78,7 @@
         </ul>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn" type="submit"><img src="./img/loupe.png" alt="search-icon" width="24" height="24"></button>
+            <button class="btn" type="submit"><img src="{{ asset('img/loupe.png') }}" alt="search-icon" width="24" height="24"></button>
         </form>
         </div>
 
