--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -40,7 +40,7 @@
                 Citations
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="quotes.html">Liste générale</a></li>
+                <li><a class="dropdown-item" href="{{ path("app_frontoffice_quotes_browse") }}">Liste générale</a></li>
                 <li><a class="dropdown-item" href="#">Par livre</a></li>
                 <li><a class="dropdown-item" href="#">Par épisode</a></li>
             </ul>
