--- a/templates/backoffice/season/edit.html.twig
+++ b/templates/backoffice/season/edit.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Edit Season{% endblock %}
 
 {% block body %}
-    <h1>Modification saison</h1>
+    <h1>Modification saison {{ season.id }}</h1>
 
-    {{ include('backoffice/season/_form.html.twig', {'button_label': 'Update'}) }}
+    <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">retour à la liste</a>
 
-    <a href="{{ path('app_backoffice_season_browse') }}">retour à la liste</a>
+    {{ include('backoffice/season/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
+
 
     
 {% endblock %}
