--- a/templates/backoffice/season/read.html.twig
+++ b/templates/backoffice/season/read.html.twig
@@ -7,11 +7,11 @@
 <main>
     
     <div class="main-content">
-        <h1>Bienvenue sur le Backoffice Kaamel'O'tt</h1>
+        <h1>SAISON {{ season.id }}</h1>
     </div>
 
     <div class="container  ">
-        <a href="{{ path('app_backoffice_season_browse') }}">Retour à la liste</a>
+        <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">Retour à la liste</a>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -25,8 +25,8 @@
                     <th scope="row">{{ season.id }}</th>
                     <td>{{ season.title }}</td>
                     <td>
-                        <a href="{{ path('app_backoffice_season_edit', {'id': season.id}) }}">Modifier</a>
-                        <a href="#">Supprimer</a> 
+                        <a href="{{ path('app_backoffice_season_edit', {'id': season.id}) }}" class="btn btn-warning">Modifier</a>
+                        <a href="{{ path('app_backoffice_season_delete', {'id': season.id}) }}" class="btn btn-danger">Supprimer</a>
                     </td>
                 </tr>
             </tbody>
