add front link in the nav and add legal mentions link in the back footer

--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -1,12 +1,12 @@
 <header>
 
     <div class="logo">
-    <a href="{{ path("app_backoffice_home") }}"><img class="img" src="{{ asset('img/logo.png') }}"></a>
+    <a href="{{ path("app_home_index") }}"><img class="img" src="{{ asset('img/logo.png') }}"></a>
     </div>
 
 <nav class="navbar navbar-expand-xxl bg-body-secondary" >
     <div class="container-fluid">
-        <a class="navbar-brand title" href="{{ path("app_backoffice_home") }}"> Kaamel'O'tt </a>
+        <a class="navbar-brand title" href="{{ path("app_home_index") }}"> Kaamel'O'tt </a>
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
