Pagination is on its way

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,6 +97,11 @@ figcaption {
     text-align: center;
 }
 
+.pagination {
+    /* max-width: 100%; */
+    /* overflow-wrap: break-word; */
+}
+
 @media screen and (max-width: 375px) {
     
     footer  {
