--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -20,8 +20,6 @@
                 <span class="ps-1">{{ randomQuote.rating }}</span>
             </div>
 
-            {% dump(randomQuote) %}
-
         </div>
         <div class="card-body">
         <i class="bi bi-heart-fill d-flex justify-content-end"></i>
@@ -33,9 +31,9 @@
     </div>
 
     
-    <p class="citation">“ {{ randomQuote.text }} ”</p>
+    {# <p class="citation">“ {{ randomQuote.text }} ”</p>
     <h6 class="name">Dame Sélie</h6>
-    </div>
+    </div> #}
 
     <div class="text-center">
     <img class="img-fluid" src="./img/kamelott.jpeg">
