modification of mention legal in legalNotice

--- a/templates/frontoffice/home/legalNotice.html.twig
+++ b/templates/frontoffice/home/legalNotice.html.twig
@@ -32,7 +32,7 @@
             <div class="card-body">
                 <h5 class="card-title title">Propriété intellectuelle et droit d'auteur</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary"> xxxxxxx</h6>
-                <p class="card-text">lorem</p>
+                <p class="card-text"><a href="{{ path("app_home_legalNotice") }}" class="nav-link link-opacity-25-hover" role="button" >Dictionnaire d'Iconographie</a></p>
             </div>
         </div>
     </div>
