--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Kaamel'O'tt - Accueil{% endblock %}
 
 {% block body %}
-<main>
+<main  class="p-3">
     <div class="text-center mb-3">
     
     {# todo dynamiser la page quand on aura la BDD fonctionnelle #}
