--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -6,11 +6,11 @@
 <main  class="p-3">
     <div class="text-center mb-3">
     
-    {# todo dynamiser la page quand on aura la BDD fonctionnelle #}
+    {# todo dynamiser la page quand on aura la BDD fonctionnelle il faut aussi gérer rating et favorite #}
 
     <div class="card mb-3">
-        <div class="card-header d-flex justify-content-end">
-
+        <div class="card-header d-flex justify-content-between">
+            <h6> La citation du moment </h6> 
             <div class="d-flex" style="color: orange;">
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
@@ -25,7 +25,7 @@
         <i class="bi bi-heart-fill d-flex justify-content-end"></i>
         <blockquote class="blockquote mb-0">
             <p>"{{ randomQuote.text }}"</p>
-            <footer class="blockquote-footer"> {{ randomQuote.personage_id }},<cite title="Source Title"> <strong>{{ randomQuote.episode_id}}</strong>, {{ randomQuote.episode_id}}.</cite></footer>
+            <footer class="blockquote-footer"> {{ randomQuote.name }},<cite title="Source Title"> <strong>{{ randomQuote.titleSeason}}</strong>, {{ randomQuote.titleEpisode}}.</cite></footer>
         </blockquote>
         </div>
     </div>
