--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ path("default") }}">Accueil</a>
+            <a class="nav-link {{ (app.request.get('_route') is same as('default')) ? 'active' : '' }}  " aria-current="page" href="{{ path("default") }}">Accueil</a>
             </li>
 
             <li class="nav-item">
@@ -85,4 +85,5 @@
     </div>
 </nav>
 
+{% dump(app.request.get('_route')) %}
 </header>
