--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -28,15 +28,15 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link {{ (app.request.get('_route') is same as('default')) ? 'active' : '' }}  " aria-current="page" href="{{ path("default") }}">Accueil</a>
+            <a class="nav-link {{ (app.request.get('_route') is same as('default')) ? 'active' : '' }}" aria-current="page" href="{{ path("default") }}">Accueil</a>
             </li>
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="{{ path("app_frontoffice_personages_browse") }}">Personnages</a>
+            <a class="nav-link {{ (app.request.get('_route') is same as('app_frontoffice_personages_browse')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_frontoffice_personages_browse") }}">Personnages</a>
             </li>
 
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle {{ (app.request.get('_route') is same as('app_frontoffice_quotes_browse')) ? 'active' : '' }}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Citations
             </a>
             <ul class="dropdown-menu">
