test for img if we don't have image

--- a/templates/frontoffice/personage/read.html.twig
+++ b/templates/frontoffice/personage/read.html.twig
@@ -65,7 +65,16 @@
 
     </div>
        
-    
+          <h2 class="main__item">test pour le cas ou on a pas de photo</h2>
+<div class="col-lg-4">
+
+            <div class="text-center mb-lg-3 main__item--img">
+            <figure>
+            <img src="{{ asset('img/icone.png')}}" alt="- pas de photo de disponible pour le moment -" class="img-fluid">
+            <br>- pas de photo de disponible pour le moment -
+            </div>
+
+        </div> 
 
 
     {# <h2 class="main__item">{{ character.name }}</h2>
