--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -30,38 +30,38 @@
         </div>
     </div>
 
-    
-    {# <p class="citation">“ {{ randomQuote.text }} ”</p>
-    <h6 class="name">Dame Sélie</h6>
-    </div> #}
-
     <div class="text-center">
     <img class="img-fluid" src="./img/kamelott.jpeg">
     </div>
 
-{# {% for quote in last10Quotes %}
-    <div class="card mb-3">
-        <div class="card-header d-flex justify-content-between">
-            <h6> La citation du moment </h6> 
-            <div class="d-flex" style="color: orange;">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-half"></i>
-                <span class="ps-1">{{ quote.rating }}</span>
-            </div>
-
-        </div>
-        <div class="card-body">
-        <i class="bi bi-heart-fill d-flex justify-content-end"></i>
-        <blockquote class="blockquote mb-0">
-            <p>"{{ quote.text }}"</p>
-            <footer class="blockquote-footer"> {{ quote.personage }},<cite title="Source Title"> <strong>{{ quote.season.episode}}</strong>, {{ quote.episode}}.</cite></footer>
-        </blockquote>
+    <div class="card mt-3 mb-3"> 
+        <div class="card-body text-bg-secondary">
+            <h5 class="card-title">les Dix Dernières Citations</h5>
+            {% for key, quote in last10Quotes %}
+                <div class="card mb-3">
+                    <div class="card-header d-flex justify-content-end">
+                    {# TODO: GERER LES PROPRIETES NULLES POUR UN AJOUT DE CITATION #}
+                        <div class="d-flex" style="color: orange;">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <span class="ps-1"> {{ quote.rating }}</span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <i class="bi bi-heart-fill d-flex justify-content-end"></i>
+                        <blockquote class="blockquote mb-0">
+                            <p>"{{ quote.text }}"</p>
+                            <footer class="blockquote-footer"> {{ quote.personage.name  }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }} .</cite></footer>
+                        </blockquote>
+                    </div> 
+                </div>
+            {% endfor %}
         </div>
     </div>
-    {% endfor %} #}
+
 </main>
 
 {% endblock %}
