--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -35,15 +35,8 @@
             <a class="nav-link {{ (app.request.get('_route') is same as('app_frontoffice_personages_browse')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_frontoffice_personages_browse") }}">Personnages</a>
             </li>
 
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle {{ (app.request.get('_route') is same as('app_frontoffice_quotes_browse')) ? 'active' : '' }}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Citations
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ path("app_frontoffice_quotes_browse") }}">Liste générale</a></li>
-                <li><a class="dropdown-item" href="#">Par livre</a></li>
-                <li><a class="dropdown-item" href="#">Par épisode</a></li>
-            </ul>
+            <li class="nav-item">
+            <a class="nav-link {{ (app.request.get('_route') is same as('app_frontoffice_quotes_browse')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_frontoffice_quotes_browse") }}"> Citations </a>
             </li>
 
             <li class="nav-item dropdown">
