--- a/templates/backoffice/season/edit.html.twig
+++ b/templates/backoffice/season/edit.html.twig
@@ -1,14 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Season{% endblock %}
+{% block title %}Kaamel'O'tt - Saisons{% endblock %}
 
 {% block body %}
-    <h1>Modification saison {{ season.id }}</h1>
-
+<main>
+    <div class="main-content">
+        <h1>Modification saison {{ season.id }}</h1>
+    </div> 
+    <div class="container  "> 
     <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">retour à la liste</a>
 
     {{ include('backoffice/season/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
-
+    </div>
 
     
 {% endblock %}
