--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -52,7 +52,7 @@
             </li>  
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Questions</a>
+            <a class="nav-link " aria-current="page" href="{{ path('app_backoffice_question_browse') }}">Questions</a>
             </li> 
 
             <li class="nav-item">
