--- a/templates/backoffice/season/read.html.twig
+++ b/templates/backoffice/season/read.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season Browse{% endblock %}
+{% block title %}Kaamel'O'tt - Saisons{% endblock %}
 
 {% block body %}
 
