form personage ok

--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Kaamel'O'tt - Backoffice{% endblock %}
 
 {% block body %}
 
