--- a/templates/backoffice/personage/edit.html.twig
+++ b/templates/backoffice/personage/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier un Personnage{% endblock %}
+{% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
     <h1>Modifier un Personnage</h1>
