--- a/templates/backoffice/personage/index.html.twig
+++ b/templates/backoffice/personage/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Personnages{% endblock %}
+{% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
     <h1>Liste des personnages</h1>
 
-    <a href="{{ path('app_backoffice_personage_new') }}"class="btn btn-primary">Créer un nouveau paersonnage</a>
+    <a href="{{ path('app_backoffice_personage_new') }}"class="btn btn-primary">Créer un nouveau personnage</a>
 
     <table class="table table-striped">
         <thead>
