--- a/templates/backoffice/personage/show.html.twig
+++ b/templates/backoffice/personage/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Fiche personnage{% endblock %}
+{% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
     <h1>Fiche personnage</h1>
