--- a/templates/backoffice/personage/new.html.twig
+++ b/templates/backoffice/personage/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau personnage{% endblock %}
+{% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
     <h1>Créer un nouveau personnage</h1>
