List of seasons in the navbar is now accessible everywhere

--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -44,13 +44,12 @@
                 Saisons
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Livre I</a></li>
-                <li><a class="dropdown-item" href="#">Livre II</a></li>
-                <li><a class="dropdown-item" href="#">Livre III</a></li>
-                <li><a class="dropdown-item" href="#">Livre IV</a></li>
-                <li><a class="dropdown-item" href="#">Livre V</a></li>
-                <li><a class="dropdown-item" href="#">Livre VI</a></li>
-                <li><a class="dropdown-item" href="#">Premier volet</a></li>
+
+                {# we loop here to get all our seasons #}
+                {% for season in seasonsList.getSeasons %}
+                <li><a class="dropdown-item" href="{{ path("app_frontoffice_season_read", {"id" : season.id }) }}">{{ season.title }}</a></li>
+                {% endfor %}
+
             </ul>
             </li>
 
