--- a/templates/frontoffice/quote/index.html.twig
+++ b/templates/frontoffice/quote/index.html.twig
@@ -12,8 +12,7 @@
     
     <div class="col-lg-8">
 
-        {# we have to seek "quotes" in data because with the pagination, this is where they are #}
-        {% for quote in quotes.data %}
+        {% for quote in pagination %}
         <div class="card mb-3">
             <div class="card-header d-flex justify-content-end">
 
@@ -36,12 +35,6 @@
             </div>
         </div>
         {% endfor %}
-
-        {# we create some variables needed for the partial pagination #}
-        {% set path = 'app_frontoffice_quotes_browse' %}
-        {% set pages = quotes.pages %}
-        {% set currentPage = quotes.page %}
-        {% include "partials/_pagination.html.twig" %}
 
     </div>
     
@@ -92,6 +85,8 @@
         </div>
     </div>
 </div>
+
+{{ knp_pagination_render(pagination) }}
 
 </main>
 {% endblock %}
