--- a/templates/backoffice/personage/new.html.twig
+++ b/templates/backoffice/personage/new.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
+
+<main>
+    <div class="main-content">
     <h1>Créer un nouveau personnage</h1>
+    </div>
 
     <a href="{{ path('app_backoffice_personage_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/personage/_form.html.twig') }}
-
+</main>
     
 {% endblock %}
