--- a/templates/backoffice/personage/index.html.twig
+++ b/templates/backoffice/personage/index.html.twig
@@ -3,8 +3,11 @@
 {% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
-    <h1>Liste des personnages</h1>
 
+<main>
+    <div class="main-content">
+    <h1>Liste des personnages</h1>
+    </div>
     <a href="{{ path('app_backoffice_personage_new') }}"class="btn btn-primary">Créer un nouveau personnage</a>
 
     <table class="table table-striped">
@@ -38,6 +41,6 @@
         {% endfor %}
         </tbody>
     </table>
-
+</main>
     
 {% endblock %}
