--- a/templates/backoffice/personage/show.html.twig
+++ b/templates/backoffice/personage/show.html.twig
@@ -3,8 +3,11 @@
 {% block title %}Kaamel'O'tt - Personnages{% endblock %}
 
 {% block body %}
-    <h1>Fiche personnage</h1>
 
+<main>
+    <div class="main-content">
+    <h1>Fiche personnage</h1>
+    </div>
     <a href="{{ path('app_backoffice_personage_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
     <table class="table">
@@ -37,4 +40,7 @@
     <a href="{{ path('app_backoffice_personage_edit', {'id': personage.id}) }}"class="btn btn-warning">Modifier</a>
 
     {{ include('backoffice/personage/_delete_form.html.twig') }}
+
+</main>
+
 {% endblock %}
