--- a/templates/backoffice/quote/edit.html.twig
+++ b/templates/backoffice/quote/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Quote{% endblock %}
+{% block title %}Kaamel'O'tt - Citations{% endblock %}
 
 {% block body %}
-    <h1>Edit Quote</h1>
+
+<main>
+    <div class="main-content">
+    <h1>Modifier une citation</h1>
+    </div>
+
+      <a href="{{ path('app_backoffice_quote_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/quote/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_backoffice_quote_index') }}">back to list</a>
-
-    {{ include('backoffice/quote/_delete_form.html.twig') }}
+  
+</main>
+    
 {% endblock %}
