--- a/templates/backoffice/quote/new.html.twig
+++ b/templates/backoffice/quote/new.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Quote{% endblock %}
+{% block title %}Kaamel'O'tt - Citations{% endblock %}
 
 {% block body %}
-    <h1>Create new Quote</h1>
+
+<main>
+    <div class="main-content">
+    <h1>Créer une nouvelle citation</h1>
+    </div>
+
+    <a href="{{ path('app_backoffice_quote_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/quote/_form.html.twig') }}
 
-    <a href="{{ path('app_backoffice_quote_index') }}">back to list</a>
+</main>    
 {% endblock %}
