UserController : create and  Add background-image for backoffice: done

--- a/public/css/styles_back.css
+++ b/public/css/styles_back.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Times New Roman', serif;
-    background-color: pink;
+    background-image: url(../img/background/excalibur-g96a16a51f_1920.jpg) ;
     /* height: 100vh; */
     /* width:100vw; */
     background-position: center;
