--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -56,7 +56,7 @@
             </li> 
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Utilisateurs</a>
+            <a class="nav-link " aria-current="page" href="{{ path('app_backoffice_user_browse') }}">Utilisateurs</a>
             </li>      
 
         </ul>
