change titles of the Frontoffice files .twig

--- a/templates/frontoffice/home/index.html.twig
+++ b/templates/frontoffice/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Accueil{% endblock %}
+{% block title %}Kaamel'O'tt{% endblock %}
 
 {% block body %}
 <main  class="p-3">
