--- a/templates/frontoffice/home/legalNotice.html.twig
+++ b/templates/frontoffice/home/legalNotice.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Mentions Légales{% endblock %}
+{% block title %}Kaamel'O'tt - Mentions légales{% endblock %}
 
 {% block body %}
 <main class="p-3">
