--- a/templates/frontoffice/personage/read.html.twig
+++ b/templates/frontoffice/personage/read.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ character.name }}{% endblock %}
+{% block title %}Kaamel'O'tt - {{ character.name }}{% endblock %}
 
 {% block body %}
 
