--- a/templates/frontoffice/season/read.html.twig
+++ b/templates/frontoffice/season/read.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Livre {{ season.title }}{% endblock %}
+{% block title %}Kaamel'O'tt - {{ season.title }}{% endblock %}
 
 {% block body %}
 
