--- a/templates/frontoffice/home/iconographyIndex.html.twig
+++ b/templates/frontoffice/home/iconographyIndex.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt -Mentions Légales{% endblock %}
+{% block title %}Kaamel'O'tt - Iconographies{% endblock %}
 
 {% block body %}
 <main class="p-3 ">
