--- a/templates/frontoffice/season/index.html.twig
+++ b/templates/frontoffice/season/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Livres{% endblock %}
+{% block title %}Kaamel'O'tt - Saisons{% endblock %}
 
 {% block body %}
 
