--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -44,7 +44,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Episodes</a>
+            <a class="nav-link " aria-current="page" href="{{ path('app_backoffice_episode_browse') }}">Episodes</a>
             </li>
 
             <li class="nav-item">
