UserController all method: done

--- a/templates/backoffice/user/browse.html.twig
+++ b/templates/backoffice/user/browse.html.twig
@@ -22,13 +22,16 @@
             </thead>
             <tbody>
             {% for user in users %}
-            {% dump(user) %}
                 <tr>
                     <th scope="row">{{ user.id }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                     <td>{{ user.password }}</td>
-                    <td></td>
+                    <td>
+                    {% if user.avatar is not null %}
+                    {{ user.avatar.name }}
+                    {% endif %}
+                    </td>
                     <td>
                         <a href="{{ path('app_backoffice_user_read', {'id': user.id}) }}" class="btn btn-success">Voir</a>
                         <a href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}" class="btn btn-warning">Modifier</a>
