--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -66,7 +66,7 @@
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Liste des Utilisateurs</h5>
-                        <a href="{{ path('app_backoffice_home')}}" class="btn btn-success">voir</a>
+                        <a href="{{ path('app_backoffice_user_browse') }}" class="btn btn-success">voir</a>
                     </div>
                 </div>
             </div>    
