--- a/public/css/styles_back.css
+++ b/public/css/styles_back.css
@@ -73,7 +73,7 @@ footer > a:hover {
     }
 }
 
-.coucou {
+.main-bo {
     padding: 2rem 10rem 2rem 10rem;
     display:flex;
     justify-content: space-around;
