--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -12,7 +12,7 @@
 
     <div class="container  ">
 
-        <div class="row gy-5 coucou">
+        <div class="row gy-5 main-bo">
             <div class="col" >
                 <div class="card " style="width: 18rem;">
                     <div class="card-body">
