--- a/templates/backoffice/personage/_form.html.twig
+++ b/templates/backoffice/personage/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn btn-success">Valider les modifications</button>
+    <button class="btn btn btn-success">Valider</button>
 {{ form_end(form) }}
