--- a/templates/partials/_nav_back.html.twig
+++ b/templates/partials/_nav_back.html.twig
@@ -36,7 +36,7 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Citations</a>
+            <a class="nav-link " aria-current="page" href="{{ path("app_backoffice_quote_browse") }}">Citations</a>
             </li>
 
             <li class="nav-item">
